--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.application.name=ThinkNotesBackend
 spring.security.user.name=admin
 spring.security.user.password=smithson
+spring.datasource.url=jdbc:mysql://localhost:3306/thinknotes?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=toor
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+logging.level.org.springframework.security=DEBUG
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
